--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^1.1.0",
     "currency-flags": "^1.7.1",
     "currency-symbol-map": "^4.0.4",
+    "express": "^4.16.3",
     "material-ui-pickers": "^1.0.0-rc.10",
     "moment": "^2.22.2",
     "react": "^16.4.1",
@@ -19,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "postinstall": "npm run build"
   }
 }
