--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "react-select": "^2.0.0-beta.6",
-    "tcmb-exchange-rates": "^0.1.4"
+    "react-select": "^2.0.0-beta.6"
   },
   "scripts": {
     "start": "react-scripts start",
